--- a/index.html
+++ b/index.html
@@ -64,9 +64,7 @@
          <br>
          <br>
     <br>
-<div class="video-container">
-    <iframe src="https://www.youtube.com/watch?v=it3LSaCmJ2c&ab_channel=AkaFox1026ArtzFx%F0%9F%87%A7%F0%9F%87%B7" frameborder="0" allowfullscreen></iframe>
-  </div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/it3LSaCmJ2c?si=hiQ1NnBB3aW-7lgy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     <br>
 
 <!-- Inicio codigo Contador -->
