--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
          <br>
          <br>
     <br>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/it3LSaCmJ2c?si=hiQ1NnBB3aW-7lgy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    <br>
+<iframe src="https://www.climatempo.com.br/previsao-do-tempo/15-dias/cidade/1439/palhoca-sc"></iframe>    <br>
 
 <!-- Inicio codigo Contador -->
 <div align="center"><a title="rastreamento correios" href=""><img src="https://contador-gratis.com/contadores-de-visitas/291123080131425.gif" alt="rastreamento correios"></a><div><a href="" title="contador de visitas">Contador de Visitas</a></div></div>
